--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ add_executable(arkanoid
     src/Platform.cpp
     src/Ball.cpp
     src/Brick.cpp
+    src/ildus.cpp
+    src/utils.cpp
     )
 
 target_include_directories(arkanoid PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
